bootstrap/argo-workflows/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argo-server
  namespace: argo
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/use-regex: 'true'
spec:
  ingressClassName: nginx
  rules:
  - host: argo-workflow.local
    http:
      paths:
      - path: /(/|$)(.*) #/argo(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: argo-server
            port:
              name: web
  tls:
  - hosts:
    - argo-workflow.local
    secretName: tls.localhost
